<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item

            android:id="@+id/nav_home_cliente"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_cliente_home"
            app:showAsAction="ifRoom"/>

        <item

            android:id="@+id/nav_makecall_client"
            android:icon="@drawable/ic_baseline_add_ic_call_24"
            android:title="@string/menu_cliente_realizarLlamada"
            app:showAsAction="never"/>

        <item

            android:id="@+id/nav_logout_cliente"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_cliente_salir"
            app:showAsAction="never"/>

</menu>