<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contenedorDeRvCliente"
        android:orientation="vertical"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"

        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rvFechaDeLlamada"
            android:text="@string/fecha_de_llamada"
            android:textSize="20sp"

            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rvHorarioDeLlamada"
            android:text="@string/horario_de_llamada"
            android:textSize="20sp"

            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rvDuracionDeLaLlamada"
            android:text="@string/duracion_de_la_llamada"
            android:textSize="20sp"

            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rvCostoDeLlamada"
            android:text="@string/costo_de_la_llamada"
            android:textSize="20sp"

            android:layout_marginBottom="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rvTipoDeLlamada"
            android:text="@string/tipo_de_llamada"
            android:textSize="20sp"
            android:textColor="@color/green_200"

            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>