<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz.fragments.AgregarClienteFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agregarClienteTitulo"
        android:text="@string/nuevo_cliente"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/agregarClienteDatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agregarClienteDatos"
        android:orientation="vertical"
        android:layout_marginTop="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agregarClienteTitulo"
        app:layout_constraintBottom_toTopOf="@+id/agregarClienteBotones"
        >


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/agregarClienteId"
            android:hint="@string/ingresar_id"
            android:textSize="20sp"
            android:ems="10"
            android:layout_marginTop="50dp"
            android:autofillHints="username"
            android:inputType="text"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/agregarClienteNombre"
            android:hint="@string/nombre_del_cliente"
            android:textSize="20sp"
            android:ems="10"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:autofillHints="username"
            android:inputType="text"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/agregarClienteApellido"
            android:hint="@string/apellido_del_cliente"
            android:ems="10"
            android:textSize="20sp"
            android:autofillHints="username"
            android:inputType="text" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agregarClienteBotones"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"

        app:layout_constraintTop_toBottomOf="@+id/agregarClienteDatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agregarClienteButton"
        android:text="@string/agregar"
        android:textSize="20sp"
        android:ems="5"
        android:layout_marginEnd="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agregarClienteButtonSalir"
        android:text="@string/salir"
        android:textSize="20sp"
        android:ems="5"
        android:layout_marginStart="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>