<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz.fragments.QuitarClienteFragment">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quitarClienteButtonSalir"
        android:text="@string/salir"
        android:textSize="20sp"
        android:ems="5"
        android:layout_marginTop="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/quitarClienteButton"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quitarClienteTitulo"
        android:text="@string/eliminar_cliente"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/quitarClienteDatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quitarClienteDatos"
        android:orientation="vertical"
        android:layout_marginTop="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quitarClienteTitulo"
        app:layout_constraintBottom_toTopOf="@+id/quitarClienteButton"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quitarClienteId"
            android:hint="@string/ingresar_id"
            android:textSize="20sp"
            android:ems="10"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:autofillHints="username"
            android:inputType="number"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quitarClienteNombre"
            android:hint="@string/ingresar_nombre"
            android:ems="10"
            android:textSize="20sp"
            android:autofillHints="username"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quitarClienteButton"
        android:text="@string/eliminar"
        android:textSize="20sp"
        android:ems="7"
        android:layout_marginTop="50dp"

        app:layout_constraintTop_toBottomOf="@+id/quitarClienteDatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>