<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz.InicioDeSesion">

    <TextView
        android:id="@+id/tituloPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_de_sesi_n"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/ingresarUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ingresarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="yes"
        android:ems="10"
        android:hint="@string/ingrese_usuario"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/ingresarContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloPrincipal">

    </EditText>

    <EditText
        android:id="@+id/ingresarContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="yes"
        android:ems="10"
        android:hint="@string/ingresar_clave"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#78909C"

        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/botonIngresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/ingresarUsuario">

    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonIngresar"
        android:text="@string/ingresar"
        android:textSize="25sp"
        android:backgroundTint="@color/red_200"
        android:ems="8"
        app:layout_constraintTop_toBottomOf="@id/ingresarContra"
        app:layout_constraintBottom_toTopOf="@+id/textosClickeables"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textosClickeables"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonIngresar"
        >

        <TextView
            android:id="@+id/textoOlvidoClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"

            android:clickable="true"
            android:focusable="true"

            android:text="@string/olvide_clave"
            android:textColor="@color/clickeable_blue"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck">

        </TextView>

        <TextView
            android:id="@+id/textoRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:clickable="true"
            android:focusable="true"
            android:text="@string/registrarse"

            android:textColor="@color/clickeable_blue"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck">

        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>