<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/rvLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/rvNombreCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/rvTipoDeCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_cliente"
            android:textSize="18sp"
            android:textColor="@color/green_200">

        </TextView>

        <TextView
            android:id="@+id/rvCostoTotalLlamadasCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/costo_total_llamadas"
            android:textSize="18sp"
            >
        </TextView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>